// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentMethods renders correctly after add STORJ and cancel click 1`] = `
<div class="payment-methods-area">
  <div class="payment-methods-area__functional-area extended">
    <div class="payment-methods-area__functional-area__top-container">
      <h1 aria-roledescription="title" class="payment-methods-area__functional-area__title">Payment Method</h1>
      <div class="payment-methods-area__functional-area__button-area">
        <div class="payment-methods-area__functional-area__button-area__cancel">
          <p class="payment-methods-area__functional-area__button-area__cancel__text">Cancel</p>
        </div>
      </div>
    </div>
    <div class="payments-bonus-container payment-methods-area__functional-area__bonus"><svg class="banner-logo-svg"></svg>
      <div class="payments-bonus-container__text-container">
        <p class="payments-bonus-container__text-container__main-text">
          Get free credits for paying in STORJ Token
        </p>
        <p class="payments-bonus-container__text-container__additional-text">
          Deposit STORJ Token to your account and receive a 10% bonus, or $10 for every $100.
        </p>
      </div>
    </div>
    <div class="add-storj-area">
      <p class="add-storj-area__support-info">To deposit STORJ token and request higher limits, please contact <a target="_blank" rel="noopener noreferrer" href="https://supportdcs.storj.io/hc/en-us/requests/new?ticket_form_id=360000683212">Support</a></p>
    </div>
    <!---->
    <!---->
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`PaymentMethods renders correctly after add STORJ and cancel click 2`] = `
<div class="payment-methods-area">
  <div class="payment-methods-area__functional-area">
    <div class="payment-methods-area__functional-area__top-container">
      <h1 aria-roledescription="title" class="payment-methods-area__functional-area__title">Payment Method</h1>
      <div class="payment-methods-area__functional-area__button-area">
        <div class="payment-methods-area__functional-area__button-area__default-buttons">
          <div class="add-storj-button container blue-white" style="width: 123px; height: 46px; border-radius: 6px; font-size: 16px;">
            <!---->
            <!----> <span class="label"><!----> <!----> <!----> <!----> <!----> <!---->Add STORJ</span>
          </div>
        </div>
      </div>
    </div>
    <div class="payments-bonus-container payment-methods-area__functional-area__bonus"><svg class="banner-gift-svg"></svg>
      <div class="payments-bonus-container__text-container">
        <p class="payments-bonus-container__text-container__main-text">
          Add a Payment Method to Get Started
        </p>
        <p class="payments-bonus-container__text-container__additional-text">
          Your first 150GB are free. You will not be charged until you use more than 150GB.
        </p>
      </div>
    </div>
    <!---->
    <!---->
    <div class="add-card-button">
      <!---->
      <!----> <span>Add Card</span>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`PaymentMethods renders correctly after add card and cancel click 1`] = `
<div class="payment-methods-area">
  <div class="payment-methods-area__functional-area reduced">
    <div class="payment-methods-area__functional-area__top-container">
      <h1 aria-roledescription="title" class="payment-methods-area__functional-area__title">Payment Method</h1>
      <div class="payment-methods-area__functional-area__button-area">
        <div class="payment-methods-area__functional-area__button-area__cancel">
          <p class="payment-methods-area__functional-area__button-area__cancel__text">Cancel</p>
        </div>
      </div>
    </div>
    <!---->
    <!---->
    <addcardform-stub></addcardform-stub>
    <div class="add-card-button button-moved">
      <!---->
      <!----> <span>Add Card</span>
    </div>
  </div>
  <div class="payment-methods-area__security-info-container">
    <lockimage-stub></lockimage-stub> <span class="payment-methods-area__security-info-container__info">
            Your card is secured by Stripe through TLS and AES-256 encryption. Your information is secure.
        </span>
  </div>
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`PaymentMethods renders correctly after add card and cancel click 2`] = `
<div class="payment-methods-area">
  <div class="payment-methods-area__functional-area">
    <div class="payment-methods-area__functional-area__top-container">
      <h1 aria-roledescription="title" class="payment-methods-area__functional-area__title">Payment Method</h1>
      <div class="payment-methods-area__functional-area__button-area">
        <div class="payment-methods-area__functional-area__button-area__default-buttons">
          <vbutton-stub label="Add STORJ" width="123px" height="46px" fontsize="16px" borderradius="6px" icon="none" isbluewhite="true" onpress="[Function]" class="add-storj-button"></vbutton-stub>
        </div>
      </div>
    </div>
    <paymentsbonus-stub class="payment-methods-area__functional-area__bonus"></paymentsbonus-stub>
    <!---->
    <!---->
    <div class="add-card-button">
      <!---->
      <!----> <span>Add Card</span>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`PaymentMethods renders correctly with card 1`] = `
<div class="payment-methods-area">
  <div class="payment-methods-area__functional-area">
    <div class="payment-methods-area__functional-area__top-container">
      <h1 aria-roledescription="title" class="payment-methods-area__functional-area__title">Payment Method</h1>
      <div class="payment-methods-area__functional-area__button-area">
        <div class="payment-methods-area__functional-area__button-area__default-buttons">
          <div class="add-storj-button container blue-white" style="width: 123px; height: 46px; border-radius: 6px; font-size: 16px;">
            <!---->
            <!----> <span class="label"><!----> <!----> <!----> <!----> <!----> <!---->Add STORJ</span>
          </div>
        </div>
      </div>
    </div>
    <div class="payments-bonus-container payment-methods-area__functional-area__bonus"><svg class="banner-logo-svg"></svg>
      <div class="payments-bonus-container__text-container">
        <p class="payments-bonus-container__text-container__main-text">
          Get free credits for paying in STORJ Token
        </p>
        <p class="payments-bonus-container__text-container__additional-text">
          Deposit STORJ Token to your account and receive a 10% bonus, or $10 for every $100.
        </p>
      </div>
    </div>
    <!---->
    <!---->
    <div class="add-card-button">
      <!---->
      <!----> <span>Add Card</span>
    </div>
  </div>
  <!---->
  <!---->
  <div class="payment-methods-area__existing-cards-container">
    <div class="payment-methods-container__card-container">
      <div class="payment-methods-container__card-container__info-area">
        <div class="payment-methods-container__card-container__info-area__card-logo"><svg></svg></div>
        <div class="payment-methods-container__card-container__info-area__info-container"><img src="@/../static/images/payments/cardStars.png" alt="Hidden card digits stars image">
          <h1 class="bold">0000</h1>
        </div>
        <div class="payment-methods-container__card-container__info-area__expire-container">
          <h2 class="medium">Expires</h2>
          <h1 class="bold">12/2100</h1>
        </div>
      </div>
      <div class="payment-methods-container__card-container__button-area">
        <div class="payment-methods-container__card-container__default-button">
          <p class="payment-methods-container__card-container__default-button__label">Default</p>
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>
`;

exports[`PaymentMethods renders correctly without card 1`] = `
<div class="payment-methods-area">
  <div class="payment-methods-area__functional-area">
    <div class="payment-methods-area__functional-area__top-container">
      <h1 aria-roledescription="title" class="payment-methods-area__functional-area__title">Payment Method</h1>
      <div class="payment-methods-area__functional-area__button-area">
        <div class="payment-methods-area__functional-area__button-area__default-buttons">
          <div class="add-storj-button container blue-white" style="width: 123px; height: 46px; border-radius: 6px; font-size: 16px;">
            <!---->
            <!----> <span class="label"><!----> <!----> <!----> <!----> <!----> <!---->Add STORJ</span>
          </div>
        </div>
      </div>
    </div>
    <div class="payments-bonus-container payment-methods-area__functional-area__bonus"><svg class="banner-gift-svg"></svg>
      <div class="payments-bonus-container__text-container">
        <p class="payments-bonus-container__text-container__main-text">
          Add a Payment Method to Get Started
        </p>
        <p class="payments-bonus-container__text-container__additional-text">
          Your first 150GB are free. You will not be charged until you use more than 150GB.
        </p>
      </div>
    </div>
    <!---->
    <!---->
    <div class="add-card-button">
      <!---->
      <!----> <span>Add Card</span>
    </div>
  </div>
  <!---->
  <!---->
  <!---->
  <!---->
</div>
`;
